extracted_vulnerabilities/pair_212829_462395/vuln_report.txt
extracted_vulnerabilities/pair_212829_462395/wddx_vuln.c:3:1: error: Unmatched '{'. Configuration: ''. [syntaxError]
{
^
nofile:0:0: information: Active checkers: There was critical errors (use --checkers-report=<filename> to see details) [checkersReport]

